--- a/reports/result.html
+++ b/reports/result.html
@@ -48,7 +48,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jan 4, 2024 01:18:44 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Jan 4, 2024 03:14:09 PM</span>
 				</a>
 			</li>
 			<li>
@@ -149,7 +149,7 @@
 					<canvas id='child-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>4</span> step(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>5</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
 					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
@@ -169,17 +169,17 @@
 				
 				<li class='test displayed active has-leaf pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>LoginPage</span>
-						<span class='test-time'>Jan 4, 2024 01:18:45 PM</span>
+						<span class='test-name'>Admin Page</span>
+						<span class='test-time'>Jan 4, 2024 03:14:09 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 4, 2024 01:18:45 PM</span>
-	<span class='label end-time'>Jan 4, 2024 01:19:06 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 20s+847ms</span>
+	<span class='label start-time'>Jan 4, 2024 03:14:09 PM</span>
+	<span class='label end-time'>Jan 4, 2024 03:14:20 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 10s+623ms</span>
 </div>
-	<div class='test-desc'>Verify the Login page </div>
+	<div class='test-desc'>Verify the Admin page </div>
 	<div class='test-attributes'>
 			<div class='category-list'>
 				<span class='category label white-text'>Functionality</span>
@@ -192,9 +192,9 @@
 		
 				<li class='node level-1 leaf pass' status='pass' test-id='2'>
 					<div class='collapsible-header'>
-						<h5 class='node-name'>LoginPage</h5>
-						<span class="node-time label grey lighten-1 white-text">Jan 4, 2024 01:19:06 PM</span>
-						<span class='node-duration label grey lighten-1 white-text'>0h 0m 10s+108ms</span>
+						<h5 class='node-name'>Admin Page</h5>
+						<span class="node-time label grey lighten-1 white-text">Jan 4, 2024 03:14:20 PM</span>
+						<span class='node-duration label grey lighten-1 white-text'>0h 0m 8s+215ms</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 						<div class='collapsible-body'>
@@ -210,23 +210,28 @@
 										<tbody>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>1:19:03 PM</td>
+													<td class='timestamp'>3:14:16 PM</td>
 													<td class='step-details'>The user is able to enter the Username</td>
 												</tr>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>1:19:04 PM</td>
+													<td class='timestamp'>3:14:16 PM</td>
 													<td class='step-details'>The user is able to enter the Password</td>
 												</tr>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>1:19:05 PM</td>
+													<td class='timestamp'>3:14:16 PM</td>
 													<td class='step-details'>The user is able to click on the Login Button</td>
 												</tr>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>1:19:06 PM</td>
-													<td class='step-details'>The dashboard is displayed</td>
+													<td class='timestamp'>3:14:20 PM</td>
+													<td class='step-details'>The user is able to click on the Login Button</td>
+												</tr>
+												<tr class='log' status='pass'>
+													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+													<td class='timestamp'>3:14:20 PM</td>
+													<td class='step-details'>The Admin screen is displayed</td>
 												</tr>
 										</tbody>
 									</table>
@@ -311,8 +316,8 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Jan 4, 2024 01:18:45 PM</td>
-										<td class='linked' test-id='1'>LoginPage</td>
+										<td>Jan 4, 2024 03:14:09 PM</td>
+										<td class='linked' test-id='1'>Admin Page</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
@@ -381,8 +386,8 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td>Jan 4, 2024 01:18:45 PM</td>
-                                                <td class='linked' test-id='1'>LoginPage</td>
+                                                <td>Jan 4, 2024 03:14:09 PM</td>
+                                                <td class='linked' test-id='1'>Admin Page</td>
                                                 <td><span class='test-status pass'>pass</span></td>
                                             </tr>
                                         </tbody>
@@ -416,25 +421,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>4</div>
+					<div class='panel-lead'>5</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 4, 2024 01:18:44 PM</div>
+					<div class='panel-lead'>Jan 4, 2024 03:14:09 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 4, 2024 01:19:06 PM</div>
+			 		<div class='panel-lead'>Jan 4, 2024 03:14:20 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 21s+871ms</div>
+					<div class='panel-lead'>0h 0m 11s+168ms</div>
 				</div>
 			</div>
 			<div class='col s6'>
@@ -479,7 +484,7 @@
 				skipParent: 0,
 				exceptionsParent: 0,
 				
-				passChild: 4,
+				passChild: 5,
 				failChild: 0,
 				fatalChild: 0,
 				errorChild: 0,
