--- a/reports/result.html
+++ b/reports/result.html
@@ -48,7 +48,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jan 4, 2024 03:14:09 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Jan 4, 2024 10:20:30 PM</span>
 				</a>
 			</li>
 			<li>
@@ -169,17 +169,17 @@
 				
 				<li class='test displayed active has-leaf pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Admin Page</span>
-						<span class='test-time'>Jan 4, 2024 03:14:09 PM</span>
+						<span class='test-name'>Admin Page Validation</span>
+						<span class='test-time'>Jan 4, 2024 10:20:31 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 4, 2024 03:14:09 PM</span>
-	<span class='label end-time'>Jan 4, 2024 03:14:20 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 10s+623ms</span>
+	<span class='label start-time'>Jan 4, 2024 10:20:31 PM</span>
+	<span class='label end-time'>Jan 4, 2024 10:20:41 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 10s+5ms</span>
 </div>
-	<div class='test-desc'>Verify the Admin page </div>
+	<div class='test-desc'>Verify the admin page </div>
 	<div class='test-attributes'>
 			<div class='category-list'>
 				<span class='category label white-text'>Functionality</span>
@@ -192,9 +192,9 @@
 		
 				<li class='node level-1 leaf pass' status='pass' test-id='2'>
 					<div class='collapsible-header'>
-						<h5 class='node-name'>Admin Page</h5>
-						<span class="node-time label grey lighten-1 white-text">Jan 4, 2024 03:14:20 PM</span>
-						<span class='node-duration label grey lighten-1 white-text'>0h 0m 8s+215ms</span>
+						<h5 class='node-name'>Admin Page Validation</h5>
+						<span class="node-time label grey lighten-1 white-text">Jan 4, 2024 10:20:41 PM</span>
+						<span class='node-duration label grey lighten-1 white-text'>0h 0m 7s+729ms</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 						<div class='collapsible-body'>
@@ -210,27 +210,27 @@
 										<tbody>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>3:14:16 PM</td>
+													<td class='timestamp'>10:20:37 PM</td>
 													<td class='step-details'>The user is able to enter the Username</td>
 												</tr>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>3:14:16 PM</td>
+													<td class='timestamp'>10:20:37 PM</td>
 													<td class='step-details'>The user is able to enter the Password</td>
 												</tr>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>3:14:16 PM</td>
+													<td class='timestamp'>10:20:37 PM</td>
 													<td class='step-details'>The user is able to click on the Login Button</td>
 												</tr>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>3:14:20 PM</td>
-													<td class='step-details'>The user is able to click on the Login Button</td>
+													<td class='timestamp'>10:20:40 PM</td>
+													<td class='step-details'>The user is able to click on the AdminTab</td>
 												</tr>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>3:14:20 PM</td>
+													<td class='timestamp'>10:20:41 PM</td>
 													<td class='step-details'>The Admin screen is displayed</td>
 												</tr>
 										</tbody>
@@ -316,8 +316,8 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Jan 4, 2024 03:14:09 PM</td>
-										<td class='linked' test-id='1'>Admin Page</td>
+										<td>Jan 4, 2024 10:20:31 PM</td>
+										<td class='linked' test-id='1'>Admin Page Validation</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
@@ -386,8 +386,8 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td>Jan 4, 2024 03:14:09 PM</td>
-                                                <td class='linked' test-id='1'>Admin Page</td>
+                                                <td>Jan 4, 2024 10:20:31 PM</td>
+                                                <td class='linked' test-id='1'>Admin Page Validation</td>
                                                 <td><span class='test-status pass'>pass</span></td>
                                             </tr>
                                         </tbody>
@@ -427,19 +427,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 4, 2024 03:14:09 PM</div>
+					<div class='panel-lead'>Jan 4, 2024 10:20:30 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 4, 2024 03:14:20 PM</div>
+			 		<div class='panel-lead'>Jan 4, 2024 10:20:41 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 11s+168ms</div>
+					<div class='panel-lead'>0h 0m 10s+492ms</div>
 				</div>
 			</div>
 			<div class='col s6'>
