--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse--1862353386\testng-customsuite.xml</span>
+                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse-1358960561\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runner.Runner" class="method navigator-link" hash-for-method="runScenario(&quot;Positive Login of the website&quot;, &quot;Login to the OrangeHRMS website&quot;)">runScenario("Positive Login of the website", "Login to the OrangeHRMS website")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runner.adminRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify the header-Admin/UserManagement&quot;, &quot;Admin page of the Orange HRMS&quot;)">runScenario("Verify the header-Admin/UserManagement", "Admin page of the Orange HRMS")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,15 +122,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">runner.Runner</span>
+              <span class="class-name">runner.adminRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Positive Login of the website&quot;, &quot;Login to the OrangeHRMS website&quot;)">
-                  </a> <!-- runScenario("Positive Login of the website", "Login to the OrangeHRMS website") -->
+                  <a name="runScenario(&quot;Verify the header-Admin/UserManagement&quot;, &quot;Admin page of the Orange HRMS&quot;)">
+                  </a> <!-- runScenario("Verify the header-Admin/UserManagement", "Admin page of the Orange HRMS") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Positive Login of the website", "Login to the OrangeHRMS website")</span>
+                  <span class="parameters">("Verify the header-Admin/UserManagement", "Admin page of the Orange HRMS")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -140,7 +140,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse--1862353386\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse-1358960561\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -149,7 +149,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;runner.Runner&quot;/&gt;
+      &lt;class name=&quot;runner.adminRunner&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -200,13 +200,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'runner.Runner')
-data.setCell(0, 3, 2895);
+data.setCell(0, 2, 'runner.adminRunner')
+data.setCell(0, 3, 3537);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -232,42 +232,42 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">runner.Runner</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">runner.adminRunner</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">startReport</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">setData</span>
-                <span class="method-start">348 ms</span>
+                <span class="method-start">128 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@39ee94de)</span>
-                <span class="method-start">361 ms</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@6ca30b8a)</span>
+                <span class="method-start">139 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">testDetails</span>
-                <span class="method-start">696 ms</span>
+                <span class="method-start">328 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">preCondition</span>
-                <span class="method-start">709 ms</span>
+                <span class="method-start">347 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Positive Login of the website", "Login to the OrangeHRMS website")</span>
-                <span class="method-start">18653 ms</span>
+                <span class="method-name">runScenario("Verify the header-Admin/UserManagement", "Admin page of the Orange HRMS")</span>
+                <span class="method-start">6804 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">postCondition</span>
-                <span class="method-start">21550 ms</span>
+                <span class="method-start">10343 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">21759 ms</span>
+                <span class="method-start">10489 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">stopReport</span>
-                <span class="method-start">22005 ms</span>
+                <span class="method-start">10538 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
