--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96d072">  <td>24/01/04 22:20:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.postCondition()[pri:0, instance:runner.adminRunner@2cf3d63b]">&lt;&lt;postCondition</td> 
-<td>&nbsp;</td>  <td>main@1241529534</td>   <td></td> </tr>
-<tr bgcolor="917cb2">  <td>24/01/04 22:20:30</td>   <td>-10215</td> <td>&nbsp;</td><td title="&gt;&gt;adminRunner.setData()[pri:0, instance:runner.adminRunner@2cf3d63b]">&gt;&gt;setData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241529534</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>24/01/04 22:20:31</td>   <td>-9996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.preCondition()[pri:0, instance:runner.adminRunner@2cf3d63b]">&gt;&gt;preCondition</td> 
-<td>&nbsp;</td>  <td>main@1241529534</td>   <td></td> </tr>
-<tr bgcolor="eee7ff">  <td>24/01/04 22:20:37</td>   <td>-3539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.adminRunner@2cf3d63b]">runScenario</td> 
-  <td>main@1241529534</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>24/01/04 22:20:41</td>   <td>195</td> <td title="&lt;&lt;BaseClass.stopReport()[pri:0, instance:runner.adminRunner@2cf3d63b]">&lt;&lt;stopReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241529534</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>24/01/04 22:20:30</td>   <td>-10339</td> <td title="&gt;&gt;BaseClass.startReport()[pri:0, instance:runner.adminRunner@2cf3d63b]">&gt;&gt;startReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241529534</td>   <td></td> </tr>
-<tr bgcolor="eee7ff">  <td>24/01/04 22:20:30</td>   <td>-10200</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.adminRunner@2cf3d63b]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241529534</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>24/01/04 22:20:31</td>   <td>-10015</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.testDetails()[pri:0, instance:runner.adminRunner@2cf3d63b]">&gt;&gt;testDetails</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241529534</td>   <td></td> </tr>
-<tr bgcolor="eee7ff">  <td>24/01/04 22:20:41</td>   <td>147</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.adminRunner@2cf3d63b]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241529534</td>   <td></td> </tr>
+<tr bgcolor="96d072">  <td>24/01/04 23:13:43</td>   <td>0</td> <td title="&gt;&gt;BaseClass.startReport()[pri:0, instance:runner.LoginRunner@470734c3]">&gt;&gt;startReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1984513847</td>   <td></td> </tr>
+<tr bgcolor="96d072">  <td>24/01/04 23:13:43</td>   <td>462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.preCondition()[pri:0, instance:runner.LoginRunner@470734c3]">&gt;&gt;preCondition</td> 
+<td>&nbsp;</td>  <td>main@1984513847</td>   <td></td> </tr>
+<tr bgcolor="96d072">  <td>24/01/04 23:13:50</td>   <td>7873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.postCondition()[pri:0, instance:runner.LoginRunner@470734c3]">&lt;&lt;postCondition</td> 
+<td>&nbsp;</td>  <td>main@1984513847</td>   <td></td> </tr>
+<tr bgcolor="eee7ff">  <td>24/01/04 23:13:43</td>   <td>178</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.LoginRunner@470734c3]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1984513847</td>   <td></td> </tr>
+<tr bgcolor="eee7ff">  <td>24/01/04 23:13:51</td>   <td>8192</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.LoginRunner@470734c3]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1984513847</td>   <td></td> </tr>
+<tr bgcolor="eee7ff">  <td>24/01/04 23:13:49</td>   <td>6685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.LoginRunner@470734c3]">runScenario</td> 
+  <td>main@1984513847</td>   <td></td> </tr>
+<tr bgcolor="917cb2">  <td>24/01/04 23:13:43</td>   <td>158</td> <td>&nbsp;</td><td title="&gt;&gt;LoginRunner.setData()[pri:0, instance:runner.LoginRunner@470734c3]">&gt;&gt;setData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1984513847</td>   <td></td> </tr>
+<tr bgcolor="96d072">  <td>24/01/04 23:13:43</td>   <td>443</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.testDetails()[pri:0, instance:runner.LoginRunner@470734c3]">&gt;&gt;testDetails</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1984513847</td>   <td></td> </tr>
+<tr bgcolor="96d072">  <td>24/01/04 23:13:51</td>   <td>8241</td> <td title="&lt;&lt;BaseClass.stopReport()[pri:0, instance:runner.LoginRunner@470734c3]">&lt;&lt;stopReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1984513847</td>   <td></td> </tr>
 </table>
